--- a/.github/workflows/master_fa-chat-widget.yml
+++ b/.github/workflows/master_fa-chat-widget.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python project to Azure Function App - fa-chat-widget
 
 on:
@@ -11,14 +7,14 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.12' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+  PYTHON_VERSION: '3.12'                # auf deine Python-Version anpassen
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'release.zip'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - name: Checkout repository
@@ -29,33 +25,36 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Create and start virtual environment
+      - name: Create and activate virtual environment
+        working-directory: backend
         run: |
-          python -m venv venv
-          source venv/bin/activate
+          python -m venv .venv
+          source .venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        working-directory: backend
+        run: |
+          source .venv/bin/activate
+          pip install -r requirements.txt
 
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        working-directory: backend
+        run: zip -r ../release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            release.zip
-            !venv/
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -64,20 +63,19 @@ jobs:
           name: python-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip     
-        
+        run: unzip release.zip
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4F801A27410649D995A23C779E8492A3 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E4E09B9F9C354B299F955A5AE2BE5CCB }}
+          client-id:       ${{ secrets.AZUREAPPSERVICE_CLIENTID_4F801A27410649D995A23C779E8492A3 }}
+          tenant-id:       ${{ secrets.AZUREAPPSERVICE_TENANTID_E4E09B9F9C354B299F955A5AE2BE5CCB }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_852231BB74934344BD130F245D66669F }}
 
-      - name: 'Deploy to Azure Functions'
-        uses: Azure/functions-action@v1
+      - name: Deploy to Azure Functions
+        uses: azure/functions-action@v1
         id: deploy-to-function
         with:
-          app-name: 'fa-chat-widget'
-          slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+          app-name:   'fa-chat-widget'
+          slot-name:  'Production'
+          package:    ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
